--- a/.github/workflows/npmPublish.yml
+++ b/.github/workflows/npmPublish.yml
@@ -1,7 +1,7 @@
 name: Publish to GitHub Packages
 on:
   release:
-    types: [created]
+    types: [published]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -13,9 +13,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18.16.0'
+          # Defaults to the user or organization that owns the workflow file
+          scope: '@intacct-thyme'
       - run: npm ci
       - run: npm run build
       - run: npm test
       - run: npm publish
         env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
