--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -12,13 +12,13 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x, 20.x]
 
     name: Node.js v${{ matrix.node-version }}
     
     steps:
       - name: Checkout 
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
